# 100Days

./: .gitignore  README.md
Gen-AI/Cross-Border-Compliance/: .env.example  Dockerfile  Makefile  README.md  create_skeleton.py
Gen-AI/Cross-Border-Compliance/app/agents/: decision_agent.py  extraction_agent.py
Gen-AI/Cross-Border-Compliance/backend/: requirements.txt
Gen-AI/Cross-Border-Compliance/backend/app/: main.py
Gen-AI/Cross-Border-Compliance/frontend/: Dockerfile  streamlit_app.py
Gen-AI/Cross-Border-Compliance/scripts/: run_demo.py
Gen-AI/Cross-Border-Compliance/tests/: test_agents.py  test_tools.py
Gen-AI/YT-Chatbot/: .env.example  .gitignore  create_skeleton.py
Gen-AI/YT-Chatbot/app/: main.py
Gen-AI/YT-Chatbot/ingest/: chunking.py  embed_store.py  fetch_transcript.py  preprocess.py
Gen-AI/YT-Chatbot/retrieval/: chain.py
Gen-AI/YT-Chatbot/scripts/: run_chat.py  run_ingest.py  run_summary.py
Gen-AI/YT-Chatbot/services/: gemini.py  quota.py
Gen-AI/YT-Chatbot/tests/: test_chain.py
MLOps/first-project-titantic/: Makefile  README.md  pyproject.toml
MLOps/first-project-titantic/backend/: main.py
MLOps/first-project-titantic/docs/: mkdocs.yml
MLOps/first-project-titantic/docs/docs/: index.md
MLOps/first-project-titantic/first_project_titantic/: __init__.py  dataset.py  features.py  plots.py
MLOps/first-project-titantic/first_project_titantic/modeling/: predict.py  train.py
MLOps/first-project-titantic/frontend/: app.py
MLOps/first-project-titantic/notebooks/: test_script.py  titanic-data-science-solutions.ipynb  titanic.py
(+14 files in other folders)
