[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "first_project_titantic"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Shubham Vishwakarma" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["first_project_titantic"]
include = ["pyproject.toml", "first_project_titantic/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["first_project_titantic"]
force-sort-within-sections = true

